SONARJAVA-4275 Fixes from review
* Visit constructor calls
* Place the credendtials-methods.json in the right folder
* Parse the right column of credendtials-methods.json in the right order
* Take a string as a parameter for the usual constructor of HardCodedCredentialsShouldNotBeUsedCheck